# tube

./: ..save  .gitignore  IDEA.MD  a.go  readme.md
.zed/: settings.json
BACKEND/: .gitignore  Cargo.toml  docker-compose.yaml
BACKEND/auth/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  a.rs  rustfmt.toml
BACKEND/auth/src/: lib.rs  main.rs
BACKEND/auth/src/application/: ac.rs  application.rs  ban.rs  mod.rs  others.rs  report.rs  short.rs  sign_in.rs  signup.rs  subscription.rs  traits.rs
BACKEND/auth/src/config/: config.rs
BACKEND/auth/src/connections/: connections.rs  db.rs  mod.rs  rabbit.rs  redis.rs  vv.rs
BACKEND/auth/src/controller/: controller.rs
BACKEND/auth/src/downstream/: downstream.rs  mod.rs
BACKEND/auth/src/downstream/posts/: posts.rs
BACKEND/auth/src/downstream/reactions/: reactions.rs
BACKEND/auth/src/migration/: m20240108_000001_create_cake_table.rs  m20240115_184133_migrationk.rs  m20240116_024655_make_we_see_ooo.rs  m20240502_034128_update_user.rs  migrator.rs  mod.rs
BACKEND/auth/src/migrations/: m20240108_000001_create_cake_table.rs  migrator.rs  mod.rs
BACKEND/auth/src/models/: cake.rs  mod.rs
BACKEND/auth/src/repository/: ban.rs  channel.rs  fruits.rs  mod.rs  report.rs  repository.rs  session.rs  short.rs  users.rs
BACKEND/auth/test/sqlite/: test-085f3798-ce34-4c6f-b76d-1d297a07de77.sqlite  test-bc2d4019-0e9d-4dd1-a843-c0369e19c6de.sqlite
BACKEND/auth/tests/sqlite/: test-34628fe4-75f2-4cdc-bf07-99be2d13ada8.sqlite  test-48730b6b-4404-4d4b-bd55-8c33a6d96e17.sqlite  test-49ce74d9-d00d-4520-99f9-3513fbd8f21d.sqlite  test-62c644e1-ff4a-4fa3-bc37-7f3b981869e9.sqlite  tests-037e7b3c-aa73-4a41-baca-a9f6cee91bff.sqlite  tests-142e5a09-c7b8-4fce-acea-6cd21339f511.sqlite  tests-5296727b-eb0e-4a1d-a0c3-a6cb32edb240.sqlite  tests-8f7538fe-99e7-46e4-ae15-5fb1e1702ad8.sqlite  tests-c9e7b427-28a2-4e9c-bc06-d1fdad3d82e4.sqlite  tests-e8b74688-431d-42da-9260-ac59e3c188b9.sqlite
BACKEND/auth/tests/suites/: auth.rs
BACKEND/auth/tests/util/: client.rs
BACKEND/gate/: Cargo.toml  Dockerfile  Dockerfile.dev
BACKEND/gate/src/: lib.rs  main.rs
BACKEND/gate/src/Model/: error_response.rs  mod.rs  success_response.rs
BACKEND/gate/src/application/: app.rs  mod.rs  traits.rs
BACKEND/gate/src/application/account/: account.rs
BACKEND/gate/src/application/auth/: auth.rs
BACKEND/gate/src/application/posts/: posts.rs
BACKEND/gate/src/application/reactions/: reactions.rs
BACKEND/gate/src/application/search/: search.rs
BACKEND/gate/src/application/timeline/: mod.rs  timeline.rs
BACKEND/gate/src/config/: config.rs
BACKEND/gate/src/controllers/: controllers.rs  fallback.rs  mod.rs
BACKEND/gate/src/controllers/utilities/: mod.rs
BACKEND/gate/src/downstream/: downstream.rs  mod.rs
BACKEND/gate/src/errors/: error.rs  messages.rs
BACKEND/gate/src/helpers/: mod.rs
BACKEND/gate/src/helpers/constants/: constants.rs
BACKEND/gate/src/helpers/interceptors/: interceptors.rs  mod.rs
BACKEND/gate/src/helpers/middleware/: body_extractor.rs  mod.rs  param_extractor.rs  query_extractor.rs  request_id_extractor.rs
BACKEND/gate/src/helpers/util/: graceful.rs  mod.rs  utility.rs
BACKEND/gate/src/model/: error_response.rs  mod.rs  response.rs  success_response.rs
BACKEND/gate/src/routes/: account.rs  mod.rs  posts.rs  reactions.rs  routes.rs  timeline.rs
BACKEND/mem/: Cargo.toml
BACKEND/mem/src/: main.rs
BACKEND/posts/: Cargo.toml  Dockerfile  Dockerfile.dev  scratch
BACKEND/posts/src/: lib.rs  main.rs
BACKEND/posts/src/application/: channel.rs  subscription.rs
BACKEND/posts/src/migration/: m20240502_034128_update_user.rs
BACKEND/posts/src/repository/: ban.rs
BACKEND/posts/tests/sqlite/: tests-6565bf37-44c8-49f4-822d-84e456d3f745.sqlite  tests-714fa6cc-395e-4d07-8c84-44c52e7408fc.sqlite  tests-d76bd511-88ae-4c24-bbf7-fc1c5f8fb890.sqlite
BACKEND/reactions/: Cargo.toml  Dockerfile  Dockerfile.dev
BACKEND/reactions/src/: main.rs
BACKEND/reactions/src/application/: mod.rs
BACKEND/reactions/src/downstream/reactions/: reactions.rs
BACKEND/reactions/src/migration/: m20240116_034854_comment.rs  m20240116_034857_like.rs  m20240116_034924_dislike.rs  m20240116_034931_chat.rs  mod.rs
BACKEND/reactions/src/repository/: short.rs
BACKEND/reactions/tests/sqlite/: tests-08fcde2a-0422-460c-9809-eb73c52774ab.sqlite  tests-339e9628-386f-45f4-96cd-f98826cc9555.sqlite  tests-42accfb7-4108-4237-924f-372ca7c99533.sqlite  tests-64ad9e5d-fd00-4f13-be6a-c2312f150c9f.sqlite-journal  tests-8a37131b-b016-4595-9698-685a47a4f4d0.sqlite
BACKEND/sdk/: Cargo.toml  build.rs  rustfmt.toml
BACKEND/sdk/src/: lib.rs
BACKEND/sdk/src/constants/: helper.rs  types.rs
BACKEND/sdk/src/errors/: auth.rs  errors.rs  general.rs  mod.rs
BACKEND/sdk/src/generated_proto_rs/: mod.rs  tube_auth.rs  tube_posts.rs  tube_reactions.rs  tube_utils.rs
BACKEND/sdk/src/helpers/: db_util.rs  mod.rs  shutdown.rs  util.rs
BACKEND/sdk/src/models/db/: mod.rs
BACKEND/sdk/src/models/db/auth/: ban.rs  channel.rs  channel_invite.rs  channel_users.rs  devices.rs  login.rs  mod.rs  profile.rs  report.rs  session.rs  short.rs  socials.rs  user.rs
BACKEND/sdk/src/models/db/notifications/: block.rs  email_push.rs  mod.rs  notification_settings.rs  notifications.rs
BACKEND/sdk/src/models/db/posts/: community.rs  community_post_content.rs  defaults.rs  hash_tag.rs  images.rs  link.rs  mod.rs  playlist.rs  poll.rs  report.rs  short.rs  video.rs  votes.rs
BACKEND/sdk/src/models/db/reactions/: chat.rs  comment.rs  dislike.rs  like.rs  mod.rs
BACKEND/sdk/src/models/db/utils/: mod.rs  notifications.rs  search.rs  subscriptions.rs  watch_later.rs  watch_until.rs
BACKEND/sdk/src/models/schema/: general.rs  mod.rs
BACKEND/sdk/src/proto/auth/: auth.proto  request.proto  response.proto
BACKEND/sdk/src/proto/posts/: posts.proto  request.proto  response.proto
BACKEND/sdk/src/proto/reactions/: reactions.proto  request.proto  response.proto
BACKEND/sdk/src/proto/utils/: util.proto
ENV/: auth.yaml  general.yaml  posts.yaml
UI/: .eslintrc.js  App.tsx  (+6 more)
(+330 files in other folders)
