[package]
name = "mem"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
console-subscriber = "0.3.0"
tracing-subscriber = "0.3.18"
all = "0.0.1"
axum = "0.7.5"
serde = "1.0.203"
tower = "0.4.13"
uuid = "1.8.0"
tower-http = "0.5.2"
metrics-exporter-prometheus = "0.15.0"
metrics = "0.23.0"
tracing = "0.1.40"
