[package]
name = "posts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "posts"
path = "src/main.rs"

[profile.release]
opt-level=3

[profile.dev]
opt-level=0


[dependencies]
#axum = "0.7.3"
sdk = { path = "../sdk"}
#tokio = { version = "1.35.1", features = ["full"] }
#tracing = "0.1.40"
#tracing-subscriber = "0.3.18"
