[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
#sea-orm = { version = "0.12.10", features = ["macros"] }
tokio = { version = "1.35.1", features = ["full"] }
sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-tokio", "debug-print", "macros"] }
tonic = "0.10.2"
serde = { version = "1.0.195", features = ["derive"] }
argon2 = "0.5.2"
rand = "0.8.5"
thiserror = "1.0.56"
uuid = { version = "1.6.1", features = ["v4"] }
lapin = "2.3.4"
#fred = "9.0.3"
fred = { version = "7.1.0", features = ["serde_json"] }
serde_json = "1.0.120"
#tonic-build = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
